# demo

dqscript/: CMakeLists.txt  QualityCriteria-HV.json  QualityCriteria-HV.ktf  adei-path.py  check-DB.cxx  compareDB.py  db-read.cxx  excelrd.py  qa-quality-analysis.cxx  qa-quality-filter.cxx  quality-read.py  runDQ.py  runcommand.sh  runlist.sh  test-criteria.cxx  test-qa-knm1.cxx
fit/: FitKer.C
include/: Makefile  RooBkgShape.h  RooDCBShape.h  RooUserPoly.h  analysis_binning.h  analysis_commoncode.h  analysis_cuts.h  analysis_ele.h  analysis_fakes.h  analysis_fakes_bk  analysis_jet.h  analysis_mcData.h  analysis_muon.h  analysis_photon.h  analysis_photonDict.cc  analysis_photonDict_rdict.pcm  analysis_rawData.h  analysis_scalefactor.h  analysis_tools.h  bk_tdrstyle.C  roofit_Dict.cc  roofit_Dict_rdict.pcm  tdrstyle.C
